Fix header wrapping on div collapse

--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ h2,
 p {
   text-align: center;
   cursor: default;
+  white-space: nowrap;
 }
 
 /* ############################# */
